<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">Dashboard</string>
    <string name="about_app">About App</string>
    <string name="profile">Profile</string>
    <string name="favoutites">Favourites</string>
    <string name="navigation_drawer">Navigation Drawer</string>

    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_app_fragment">About App</string>
    <string name="favourites_fragment">Favourites</string>
    <string name="profile_fragment">Profile</string>
    <string name="list_item">List Item</string>
    <string name="name_of_author">Name of author</string>
    <string name="rs_299">Rs.299</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="book_name">Name of the Book</string>
    <string name="book_author">Name of the author</string>
    <string name="book_price">Rs. 299</string>
    <string name="_4_5_">4.5</string>
    <string name="about_the_book">About the book</string>
    <string name="add_to_favourites">Add To Favourites</string>
    <string name="_45">4.5</string>
    <string name="hello_world">Hello World</string>
    <string name="android_inc">Android Inc.</string>
    <string name="rs_499">Rs. 499</string>
    <string name="_4_5">4.5</string>
    <string name="action_sort">Sort</string>
    <string name="sneha_nath">SNEHA NATH</string>
    <string name="sneha_internshala_com">sneha@internshala.com</string>
    <string name="_91_1134576389">+91 1134576389</string>
    <string name="it_s_a_beginners_level_app">It\'s a beginner\'s level app.</string>
</resources>